discussion/kv_engine/163189/163189_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Move VBucket (in-mem) purgeSeqno update to PurgedItemContext

Add a new PurgedItemContext (MagmaImplicitCompactionPurgedItemContext)
so that we can pull out the implicit compaction specific logic to update
the VBucket purge seqno from compactionCore and instead update it via
purgedItem/updateRollbackPurgeSeqno.

Change-Id: Ie3b280ced3583f830e68366c8eb6e3d7b4b03bf6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-10-08 07:57:22.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-08 08:40:35.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34808/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34808/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40932/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(314): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40932/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13305/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_purged_item_context.h:23:18: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual void updateRollbackPurgeSeqno(uint64_t seqno) override {
    ~~~~~~~~     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13305/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13305/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2927/ : FAILURE

Compile error at [2021-10-08T08:10:34.118Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2927/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14059/ : FAILURE

Compile error at [2021-10-08T08:14:38.249Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14059/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15778/ : FAILURE

Compile error at [2021-10-08T08:30:37.599Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15180/ : FAILURE

Compile error at [2021-10-08T08:26:38.230Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15180/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2967/ : FAILURE

Compile error at [2021-10-08T07:59:41.305Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:314:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2967/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23200/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12093/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14909/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
